--- a/history/history1.html
+++ b/history/history1.html
@@ -15,8 +15,8 @@
             <h1 class="index-title">Благотворительный фонд <q>Благие дела</q></h1>
             <ul class="index-menu">
                 <li><a href="../about.html">О нас</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Пресса<br> о нас</a></li>
+                <li><a href="../news.html">Новости</a></li>
+                <li><a href="../press.html">Пресса<br>&nbsp;о нас</a></li>
                 <li><a href="../actions.html">Проекты<br>и акции</a></li>
                 <li><a href="../our-friends.html">Наши<br>друзья</a></li>
                 <li><a class="active" href="../our-history.html">Истории<br>&nbsp;людей</a></li>
@@ -24,7 +24,7 @@
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
                         <li><a href="../doc/details-accounting.html">Реквизиты</a></li>
-                        <li><a href="../doc/oferta.docx" target="_blank">Договор оферты</a></li>
+                        <li><a href="../doc/reports.html">Отчеты</a></li>
                         <li><a href="../doc/doc-list.html">Учредительные документы</a></li>
                     </ul>
                 </li>
@@ -35,7 +35,7 @@
                 <li>Гуля и её шестеро детей </li>
             </ul>
         </div>
-        <a href="../index.html" class="top-right-link"></a>
+        <a href="../index.html" class="top-right-link" title="Перейти на главную страницу сайта"></a>
         <div class="contact">
             <span class="contact-title">Новая подопечная Гуля и её шестеро детей<br> (имена на данный момент изменены по этическим соображениям)</span>
             <p>В Благотворительном фонде "Благие дела" появилась новая подопечная семья. Гуля (имя изменено по этическим соображениям) прибыла в Татарстан из Ингушетии. Сбежала от деспотичного мужа, который истязал её и детей на протяжении многих лет. В результате постоянных стрессов и переживаний, у Гули развилась опухоль мозга. </p>
