--- a/our-friends.html
+++ b/our-friends.html
@@ -15,8 +15,8 @@
             <h1 class="index-title">Благотворительный фонд <q>Благие дела</q></h1>
             <ul class="index-menu">
                 <li><a href="about.html">О нас</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Пресса<br> о нас</a></li>
+                <li><a href="news.html">Новости</a></li>
+                <li><a href="press.html">Пресса<br>&nbsp;о нас</a></li>
                 <li><a href="actions.html">Проекты<br>и акции</a></li>
                 <li><a class="active" href="#">Наши<br>друзья</a></li>
                 <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
@@ -24,7 +24,7 @@
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
                         <li><a href="doc/details-accounting.html">Реквизиты</a></li>
-                        <li><a href="doc/oferta.docx" target="_blank">Договор оферты</a></li>
+                        <li><a href="doc/reports.html">Отчеты</a></li>
                         <li><a href="doc/doc-list.html">Учредительные документы</a></li>
                     </ul>
                 </li>
@@ -42,6 +42,9 @@
             <a href="http://prproekt-kazan.ru/" class="our-friends spring" title="Перейти на сайт компании «Пружинный проект»"><img src="img/logo-spring.jpg" alt="логотип Производственная компания «Пружинный проект»" width="366" height="124">Производственная компания «Пружинный проект»</a>
             <a href="http://www.audex.ru/" class="our-friends audex" title="Перейти на сайт компании «Аудекс»"><img src="img/logo-audex.png" alt="логотип Аудиторско-консалтинговай компании «Аудекс»" width="280" height="80">Аудиторско-консалтинговая
                 <br>компания «Аудекс»</a>
+
+            <a href="http://cplink.ru/" class="our-friends link" title="Перейти на сайт центра печати «Линк»"><img src="img/logo-link.png" alt="логотип Центр печати «Линк»" width="152" height="190">Центр печати «Линк»</a>
+
             <a href="https://tatarstan.hh.ru/" class="our-friends hh" title="Перейти на сайт Группы компаний «НН»"><img src="img/logo-hh.png" alt="логотип Группа компаний «НН»" width="200" height="123">Группа компаний «НН»</a>
             <span class="contact-title">Наши добрые ангелы:</span>
             <p><b>Дизайнер-художник <a class="our-site-author" href="https://vk.com/id6748234" title="Перейти на страницу пользователя">Женя Фатыхова</a></b> - именно она разработала внешний облик нашего сайта до мельчайших деталей.</p>
@@ -52,7 +55,7 @@
                 <a class="our-site-author" href="https://vk.com/id4384275" title="Перейти на страницу пользователя">Элина Коба,</a>
                 <a class="our-site-author" href="https://vk.com/id7008430" title="Перейти на страницу пользователя">Екатерина Кулиева</a>
             </div>
-                      <div class="social-btn">
+            <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela" title="Наша страница в ВК">
                     <svg id="Capa_1" style="enable-background:new 0 0 112.196 112.196;" version="1.1" viewBox="0 0 112.196 112.196" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g>
