--- a/press.html
+++ b/press.html
@@ -32,8 +32,14 @@
         </div>
         <a href="index.html" class="top-right-link" title="Перейти на главную страницу сайта"></a>
         <div class="contact">
-            <span class="contact-title">Страница в разработке</span>
-            <div class="empty-div" style="width:1261px; height:250px;"></div>
+            <span class="contact-title">Совместный телевизионный проект<br>благотворительного фонда «Благие дела»<br>и ГТРК «Татарстан»</span>
+            <span class="press-date">9 декабря 2016 года</span>
+            <p>Первая героиня проекта Лейсан Сираева. Девушка одна воспитывает сына Тамерлана, несмотря на множество хронических заболеваний, и заболеваний, которые можно вылечить, но на это нужны средства, которых у Лейсан постоянно не хватает. Тамерлан страдает тяжёлой формой бронхиальной астмы и диабетом, и все средства уходят на поддержание здоровья мальчика. Семье постоянно требуются деньги на лекарства.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/n_uBhDOMI6w" frameborder="0" allowfullscreen></iframe>
+            <span class="press-date">18 декабря 2016 года</span>
+            <p>После первого выпуска телевизионного проекта Лейсан поступили предложения о подработке, а также нашёлся специалист, который пообещал отремонтировать компьютер, чтобы Лейсан смогла работать в том числе из дома – девушка занимается написанием рефератов, контрольных, курсовых и дипломных работ, поэтому компьютер ей необходим.</p>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/GV1_NzdI4qU" frameborder="0" allowfullscreen></iframe>
+
             <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela" title="Наша страница в ВК">
                     <svg id="Capa_1" style="enable-background:new 0 0 112.196 112.196;" version="1.1" viewBox="0 0 112.196 112.196" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
