--- a/our-friends.html
+++ b/our-friends.html
@@ -32,20 +32,18 @@
         </div>
         <a href="index.html" class="top-right-link" title="Перейти на главную страницу сайта"></a>
         <div class="contact">
-            <span class="contact-title">Благодарим за то, что вы с нами!</span>
+            <span class="our-friends-title">Благодарим за то, что вы с нами!</span>
             <span class="contact-title">Генеральный информационный партнёр Фонда:</span>
-            <a href="http://trt-tv.ru/" class="our-friends-gtrk" title="Перейти на сайт ГТРК «Татарстан»"><img src="img/logo-gtrk.jpg" alt="логотип ГТРК «Татарстан»" width="620" height="305">ГТРК «Татарстан»</a>
+            <a href="http://trt-tv.ru/" class="our-friends-gtrk" title="Перейти на сайт ГТРК «Татарстан»"><img src="img/logo-gtrk.jpg" alt="логотип ГТРК «Татарстан»" width="465" height="229">ГТРК «Татарстан»</a>
             <span class="contact-title">Наши благотворители:</span>
-            <a href="http://darsad.ru/" class="our-friends dar" title="Перейти на сайт детского сада «Дар»"><img src="img/logo-dar.png" alt="логотип Частный детский сад «Дар»" width="366" height="152">Частный детский сад «Дар»</a>
-            <a href="https://kazan.metro-cc.ru/" class="our-friends metro" title="Перейти на сайт компании «Metro C&C»"><img src="img/logo-metro.png" alt="логотип компании «Metro C&C»" width="366" height="153">Сеть гипермаркетов «Metro C&#38;C»
+            <a href="http://darsad.ru/" class="our-friends dar" title="Перейти на сайт детского сада «Дар»"><img src="img/logo-dar.png" alt="логотип Частный детский сад «Дар»" width="274" height="114">Частный детский сад «Дар»</a>
+            <a href="https://kazan.metro-cc.ru/" class="our-friends metro" title="Перейти на сайт компании «Metro C&C»"><img src="img/logo-metro.png" alt="логотип компании «Metro C&C»" width="274" height="115">Сеть гипермаркетов «Metro C&#38;C»
                 <br> в Казани</a>
-            <a href="http://prproekt-kazan.ru/" class="our-friends spring" title="Перейти на сайт компании «Пружинный проект»"><img src="img/logo-spring.jpg" alt="логотип Производственная компания «Пружинный проект»" width="366" height="124">Производственная компания «Пружинный проект»</a>
-            <a href="http://www.audex.ru/" class="our-friends audex" title="Перейти на сайт компании «Аудекс»"><img src="img/logo-audex.png" alt="логотип Аудиторско-консалтинговай компании «Аудекс»" width="280" height="80">Аудиторско-консалтинговая
+            <a href="http://prproekt-kazan.ru/" class="our-friends spring" title="Перейти на сайт компании «Пружинный проект»"><img src="img/logo-spring.jpg" alt="логотип Производственная компания «Пружинный проект»" width="274" height="93">Производственная компания «Пружинный проект»</a>
+            <a href="http://cplink.ru/" class="our-friends link" title="Перейти на сайт центра печати «Линк»"><img src="img/logo-link.png" alt="логотип Центр печати «Линк»" width="114" height="143">Центр печати «Линк»</a>
+            <a href="http://www.audex.ru/" class="our-friends audex" title="Перейти на сайт компании «Аудекс»"><img src="img/logo-audex.png" alt="логотип Аудиторско-консалтинговай компании «Аудекс»" width="210" height="60">Аудиторско-консалтинговая
                 <br>компания «Аудекс»</a>
-
-            <a href="http://cplink.ru/" class="our-friends link" title="Перейти на сайт центра печати «Линк»"><img src="img/logo-link.png" alt="логотип Центр печати «Линк»" width="152" height="190">Центр печати «Линк»</a>
-
-            <a href="https://tatarstan.hh.ru/" class="our-friends hh" title="Перейти на сайт Группы компаний «НН»"><img src="img/logo-hh.png" alt="логотип Группа компаний «НН»" width="200" height="123">Группа компаний «НН»</a>
+            <a href="https://tatarstan.hh.ru/" class="our-friends hh" title="Перейти на сайт Группы компаний «НН»"><img src="img/logo-hh.png" alt="логотип Группа компаний «НН»" width="150" height="92">Группа компаний «НН»</a>
             <span class="contact-title">Наши добрые ангелы:</span>
             <p><b>Дизайнер-художник <a class="our-site-author" href="https://vk.com/id6748234" title="Перейти на страницу пользователя">Женя Фатыхова</a></b> - именно она разработала внешний облик нашего сайта до мельчайших деталей.</p>
             <p><b>Веб-разработчик <a class="our-site-author" href="https://vk.com/id137415232" title="Перейти на страницу пользователя">Вячеслав Кузнецов</a></b> - именно он вдохнул жизнь в наш сайт, ставший полноценным веб-ресурсом: качественным, информативным и удобным.</p>
