--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
                 <li><a class="active" href="#">О нас</a></li>
                 <li><a href="news.html">Новости</a></li>
                 <li><a href="press.html">Пресса<br>&nbsp;о нас</a></li>
-                <li><a href="actions.html">Проекты<br>и акции</a></li>
-                <li><a href="our-friends.html">Наши<br>друзья</a></li>
+                <li><a href="actions.html">Проекты<br>&nbsp;и акции</a></li>
+                <li><a href="our-friends.html">&nbsp;Наши<br>друзья</a></li>
                 <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
                 <li><a href="contact.html">Контакты</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
@@ -35,7 +35,7 @@
             <h2 class="about-title">Наша команда:</h2>
             <div class="our-team">
                 <div class="photo">
-                    <img src="img/alija.jpg" width="200" height="200" alt="Байназарова Алия Ильгизовна" title="Байназарова Алия Ильгизовна">
+                    <img src="img/alija.png" width="200" height="200" alt="Байназарова Алия Ильгизовна" title="Байназарова Алия Ильгизовна">
                 </div>
                 <span>Байназарова Алия Ильгизовна</span>
                 <span>Президент Благотворительного фонда<br> «Благие дела»</span>
@@ -44,7 +44,7 @@
             </div>
             <div class="our-team">
                 <div class="photo">
-                    <img src="img/evita.jpg" width="200" height="200" alt="Саможенова Евита Ивановна" title="Саможенова Евита Ивановна">
+                    <img src="img/evita.png" width="200" height="200" alt="Саможенова Евита Ивановна" title="Саможенова Евита Ивановна">
                 </div>
                 <span>Саможенова Евита Ивановна</span>
                 <span>Специалист по развитию</span>
@@ -54,7 +54,7 @@
             </div>
             <div class="our-team">
                 <div class="photo">
-                    <img src="img/nailja.jpg" width="200" height="200" alt="Халитова Наиля Иршатовна" title="Халитова Наиля Иршатовна">
+                    <img src="img/nailja.png" width="200" height="200" alt="Халитова Наиля Иршатовна" title="Халитова Наиля Иршатовна">
                 </div>
                 <span>Халитова Наиля Иршатовна</span>
                 <span>Руководитель программы укрепления семьи</span>
