--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="news.html">Новости</a></li>
                 <li><a href="press.html">Пресса<br>&nbsp;о нас</a></li>
-                <li><a href="actions.html">Проекты<br>и акции</a></li>
-                <li><a href="our-friends.html">Наши<br>друзья</a></li>
+                <li><a href="actions.html">Проекты<br>&nbsp;и акции</a></li>
+                <li><a href="our-friends.html">&nbsp;Наши<br>друзья</a></li>
                 <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
                 <li><a href="contact.html">Контакты</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
