--- a/proect-actions/action-christmas-miracle.html
+++ b/proect-actions/action-christmas-miracle.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Благие дела Проекты и акции</title>
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.css">
+    <title>Благотворительность вместо сувениров</title>
+    <link rel="stylesheet" href="../style/normalize.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -14,45 +14,60 @@
         <div class="top-left-column">
             <h1 class="index-title">Благотворительный фонд <q>Благие дела</q></h1>
             <ul class="index-menu">
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="news.html">Новости</a></li>
-                <li><a href="press.html">Пресса<br>&nbsp;о нас</a></li>
-                <li><a class="active" href="#">Проекты<br>&nbsp;и акции</a></li>
-                <li><a href="our-friends.html">&nbsp;Наши<br>друзья</a></li>
-                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
-                <li><a href="contact.html">Контакты</a></li>
+                <li><a href="../about.html">О нас</a></li>
+                <li><a href="../news.html">Новости</a></li>
+                <li><a href="../press.html">Пресса<br>&nbsp;о нас</a></li>
+                <li><a class="active" href="../actions.html">Проекты<br>&nbsp;и акции</a></li>
+                <li><a href="../our-friends.html">&nbsp;Наши<br>друзья</a></li>
+                <li><a href="../our-history.html">Истории<br>&nbsp;людей</a></li>
+                <li><a href="../contact.html">Контакты</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
-                        <li><a href="doc/details-accounting.html">Реквизиты</a></li>
-                        <li><a href="doc/reports.html">Отчеты</a></li>
-                        <li><a href="doc/doc-list.html">Учредительные документы</a></li>
+                        <li><a href="../doc/details-accounting.html">Реквизиты</a></li>
+                        <li><a href="../doc/reports.html">Отчеты</a></li>
+                        <li><a href="../doc/doc-list.html">Учредительные документы</a></li>
                     </ul>
                 </li>
             </ul>
+            <ul class="breadscrumbs">
+                <li><a class="active" href="../actions.html">Проекты и акции</a></li>
+                <li>&gt;</li>
+                <li>Стань добрым волшебником</li>
+            </ul>
         </div>
-        <a href="index.html" class="top-right-link" title="Перейти на главную страницу сайта"></a>
+        <a href="../index.html" class="top-right-link" title="Перейти на главную страницу сайта"></a>
         <div class="contact">
-            <span class="contact-title">Текущие акции</span>
-            <div class="actions-item clearfix">
-                <a class="actions-main-link" href="proect-actions/action-christmas-miracle.html">Благотворительная акция «Стань добрым волшебником»</a>
-                <img src="img/wizard.jpg" alt="Благотворительная акция «Стань добрым волшебником»" width="100" height="119">
-                <p>Привет всем, чудесные Феи, волшебницы и волшебники! Давайте сотворим Новогоднее чудо и проводим этот тяжёлый год добрым делом!
-                </p>
-                <a href="proect-actions/action-christmas-miracle.html" class="action-item-more">Подробнее</a>
+            <span class="contact-title">Господа! Новый год - время волшебства! Подарите детям праздник!</span>
+            <div class="decor"></div>
+            <div class="decor-text">
+                <p class="">Привет всем, чудесные Феи, волшебницы и волшебники!</p>
+                <p class=""> Давайте сотворим Новогоднее чудо и проводим этот тяжёлый год добрым делом!</p>
             </div>
-            <div class="actions-item clearfix">
-                <a class="actions-main-link" href="proect-actions/action-charity-instead-souvenir.html">Благотворительная акция «Благотворительность вместо сувениров»</a>
-                <img src="img/santa-claus.png" alt="Благотворительная акция «Благотворительность вместо сувениров»" width="100" height="116">
-                <p>Ежегодно различные компании и учреждения тратят немалые бюджеты на милые безделушки с логотипами на подарки партнёрам. Почему бы не потратить часть «сувенирных» денег на доброе дело?</p>
-                <a href="proect-actions/action-charity-instead-souvenir.html" class="action-item-more">Подробнее</a>
+            <div class="decor  decor-left"></div>
+            <div class="decor-content">
+                <p class="">Господа! Мы, благотворительный фонд "Благие Дела". www.blagie-dela.ru, занимаемся профилактикой социального сиротства.</p>
+                <p>Под опекой нашего Фонда находится более 30-ти матерей-одиночек с риском изъятия детей по причине финансовой несостоятельности. Наша задача помочь им в трудной минуту, дать им возможность встать на ноги, оказать первоначальную помощь, далее трудоустроить, тем самым сделать так, чтоб их дети не попали в детский дом.</p>
+                <p>Скоро Новый год, и дети будут получать подарки. А у детишек наших подопечных нет. Их мамы не могут позволить себе купить своим ребятишкам сладости. И на новогодних столах в этих семьях столах, скорее всего, будет картофель, макароны и хлеб. На большее у них просто нет денег.</p>
+                <p>Мы общаемся к вам за новогодним чудом.</p>
+                <p>Помогите сделать сбор на сладкие подарки малышам! Всего нужно собрать 19600 рублей (у нас под опекой 49 детей, стоимость одного подарка 400 рублей)</p>
+                <p>Господа! Станьте волшебниками! Ведь это дети! Они не виноваты в том, что их родители попали в такую ситуацию!</p>
             </div>
-            <div class="actions-item clearfix">
-                <a class="actions-main-link" href="proect-actions/action-newyear-with-family.html">Благотворительный фуршет «Новый год в кругу семьи»</a>
-                <img src="img/newyear-ball.jpg" alt="Благотворительный фуршет «Новый год в кругу семьи»" width="100" height="149">
-                <p>Воскресный вечер можно провести по-разному. Можно пойти в кино, можно устроить прогулку по городу. А можно не только весело провести время, но и сделать доброе дело. Приглашаем на благотворительный фуршет, организованный Благотворительным фондом «Благие дела» и рестораном «Фиолет» в помощь подопечной семье Сираевых.
-                </p>
-                <a href="proect-actions/action-newyear-with-family.html" class="action-item-more">Подробнее</a>
-            </div>
+            <div class="decor  decor-left-bottom"></div>
+            <div class="decor-text">
+                <span class="column-title">Для физических лиц:</span> Сбербанк: 5469 6200 1816 6775
+                <br>
+                <br>Альфа-Банк: 4154 8220 5257 6579
+                <br>
+                <br>QIWI кошелек: +79510655550
+                <br>
+                <br>Яндекс-Деньги: 410012556408574
+                <br>
+                <br>Кошелек WebMoney: 051444142254
+                <br>
+                <br> В назначении платежа указать "Сладкий новый год"</div>
+            <div class="decor  decor-right-bottom"></div>
+            <div class="decor-divider"></div>
+
 
 
             <div class="social-btn">
@@ -73,7 +88,6 @@
                     </svg>
                 </a>
                 <a class="instagram" href="https://www.instagram.com/blagiedela/" title="Наша страница в Instagram">
-                    <!--                    <?xml version="1.0" ?>-->
                     <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Flat_copy">
                             <g>
@@ -88,7 +102,7 @@
         </div>
 
     </div>
-    <script src="js/site-script.js"></script>
+    <script src="../js/site-script.js"></script>
 </body>
 
 </html>
